# capacitia-app

./: .gitgnore  .gitignore  ANALISE_FILTROS_PROBLEMAS.md  README.md  README_ESTRUTURA_DADOS.md  Relatório Capacitia (15).xlsx  app.py  app_filtros_corrigidos.py  app_ia.py  exploration.ipynb  fix_ano_coluna.py  main.py  patch_filtro_ano.py  preparar_dados.py  pyproject.toml  requirements.txt
.data/processed/: Relatorio_Atualizado_Capacitia.xlsx  autonomiadigital_avaliacoes.parquet  autonomiadigital_inscricoes.parquet  cargos.parquet  dados.parquet  evolucao_anual_cargo.parquet  evolucao_anual_eixo.parquet  evolucao_anual_formato.parquet  evolucao_anual_geral.parquet  evolucao_anual_orgao.parquet  ministrantes.parquet  orgaos_parceiros.parquet  saude.parquet  secretarias.parquet  visao_aberta.parquet
.data/raw/: dados_avaliacoes_capacitia_autonomiadigital.csv  dados_capacitia_saude.csv  (+2 more)
.streamlit/: config.toml
dados/: CapacitIA - Trabalhos _ Assistentes - ASSISTENTES.csv  RelatorioCapacitia_AtualizadoAgosto.xlsx  Utilização de Assistentes de IA (respostas) - Respostas ao formulário 1.csv  capacitia-dados - Copia.xlsx  capacitia-dados.xlsx  capacitia-dados2.xlsx  relatorio_capacitia_.xlsx
legacy/: app_home.py  app_servidores_backup.py
pages/: 1_📊_Visão_Unificada.py  2_👥_Servidores.py  3_🏥_Saúde.py  4_📱_Autonomia_Digital.py  5_📈_Evolução_Temporal.py
relatorio/: 2026_dados.csv  2026_ministrantecarga_horaria.csv
src/: analise_orgaos_externos.py  config.py  process_all.py  process_csv_to_parquet.py  verify_results.py
styles/: home.css  main.css
(+22 files in other folders)
