[project]
name = "capacitia-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.1",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap==0.49.1",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
    "wordcloud>=1.9.6",
    "xgboost==2.0.3",
]
